Fix visual overlap allowing automatic width

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -292,7 +292,6 @@ input {
 .gear-preview-row {
   padding: 12px 12px 5px;
   font-size: 13px;
-  width: 180px;
   height: 230px;
   border: 1px solid var(--inactive-color);
   margin-right: 10px;
